--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=EM-17
+application.vendor=MarcelloQuattromani
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,15 +27,16 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/EM-17.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Users\\giuli\\Documents\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\Pirozzi\\Desktop\\mysql-connector-java-8.0.11\\mysql-connector-java-8.0.11.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\MarcelloQuattromani\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.11.jar=lib/mysql-connector-java-8.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.11.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-java-8.0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Model.prova
+main.class=Main.StartProject
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
