--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\giuli\\Desktop\\Ingegneria del Software\\ProgettoCondiviso\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar1.4.jar=lib\\jcalendar1.4.jar
 file.reference.mysql-connector-java-8.0.11.jar=lib/mysql-connector-java-8.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.11.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
