--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/EM-17.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=lib\\absolutelayout\\AbsoluteLayout.jar
 file.reference.jcalendar1.4.jar=lib\\jcalendar1.4.jar
 file.reference.mysql-connector-java-8.0.11.jar=lib/mysql-connector-java-8.0.11.jar
 includes=**
@@ -36,7 +37,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.11.jar}:\
-    ${file.reference.jcalendar1.4.jar}
+    ${file.reference.jcalendar1.4.jar}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
