--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,13 +31,17 @@ endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=lib\\absolutelayout\\AbsoluteLayout.jar
 file.reference.jcalendar1.4.jar=lib\\jcalendar1.4.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\giuli\\Desktop\\Ingegneria del Software\\ProgettoCondiviso\\lib\\JFreeChart\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\giuli\\Desktop\\Ingegneria del Software\\ProgettoCondiviso\\lib\\JFreeChart\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-java-8.0.11.jar=lib/mysql-connector-java-8.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.11.jar}:\
     ${file.reference.jcalendar1.4.jar}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
