--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,9 @@ excludes=
 file.reference.AbsoluteLayout.jar=lib\\absolutelayout\\AbsoluteLayout.jar
 file.reference.jcalendar1.4.jar=lib\\jcalendar1.4.jar
 file.reference.jcommon-1.0.23.jar=C:\\Users\\giuli\\Desktop\\Ingegneria del Software\\ProgettoCondiviso\\lib\\JFreeChart\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-1=lib\\JFreeChart\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=C:\\Users\\giuli\\Desktop\\Ingegneria del Software\\ProgettoCondiviso\\lib\\JFreeChart\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-1=lib\\JFreeChart\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-java-8.0.11.jar=lib/mysql-connector-java-8.0.11.jar
 includes=**
 jar.compress=false
@@ -41,7 +43,9 @@ javac.classpath=\
     ${file.reference.jcalendar1.4.jar}:\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jcommon-1.0.23.jar-1}:\
+    ${file.reference.jfreechart-1.0.19.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
