--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,8 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.jcommon-1.0.23.jar-1}:\
-    ${file.reference.jfreechart-1.0.19.jar-1}
+    ${file.reference.jfreechart-1.0.19.jar-1}:\
+    ${libs.junit_4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
