Aggiunto Libr JUnit

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,11 @@ file.reference.jcommon-1.0.23.jar=C:\\Users\\giuli\\Desktop\\Ingegneria del Soft
 file.reference.jcommon-1.0.23.jar-1=lib\\JFreeChart\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=C:\\Users\\giuli\\Desktop\\Ingegneria del Software\\ProgettoCondiviso\\lib\\JFreeChart\\jfreechart-1.0.19.jar
 file.reference.jfreechart-1.0.19.jar-1=lib\\JFreeChart\\jfreechart-1.0.19.jar
+file.reference.junit-4.12-javadoc.jar=lib\\junit-4.12-javadoc.jar
+file.reference.junit-4.12-sources.jar=lib\\junit-4.12-sources.jar
+file.reference.junit-4.12.jar=lib\\junit-4.12.jar
 file.reference.mysql-connector-java-8.0.11.jar=lib/mysql-connector-java-8.0.11.jar
+file.reference.org-netbeans-modules-junit.jar=lib\\org-netbeans-modules-junit.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -58,8 +62,11 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${libs.hamcrest.classpath}:\
+    ${file.reference.org-netbeans-modules-junit.jar}:\
+    ${file.reference.junit-4.12-javadoc.jar}:\
+    ${file.reference.junit-4.12-sources.jar}:\
+    ${file.reference.junit-4.12.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
