--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=lib\\absolutelayout\\AbsoluteLayout.jar
+file.reference.hamcrest-core-1.3.jar=lib\\hamcrest-core-1.3.jar
 file.reference.jcalendar1.4.jar=lib\\jcalendar1.4.jar
 file.reference.jcommon-1.0.23.jar=C:\\Users\\giuli\\Desktop\\Ingegneria del Software\\ProgettoCondiviso\\lib\\JFreeChart\\jcommon-1.0.23.jar
 file.reference.jcommon-1.0.23.jar-1=lib\\JFreeChart\\jcommon-1.0.23.jar
@@ -62,11 +63,11 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.hamcrest.classpath}:\
     ${file.reference.org-netbeans-modules-junit.jar}:\
     ${file.reference.junit-4.12-javadoc.jar}:\
     ${file.reference.junit-4.12-sources.jar}:\
-    ${file.reference.junit-4.12.jar}
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
